@@ -585,6 +585,7 @@ static void generateInternalAPIHeader(sipSpec *pt, moduleDef *mod,
 "#define sipVisitSlot                sipAPI_%s->api_visit_slot\n"
 "#define sipWrappedTypeName(wt)      ((wt)->type->td_cname)\n"
 "#define sipDeprecated               sipAPI_%s->api_deprecated\n"
+"#define sipKeepReference            sipAPI_%s->api_keep_reference\n"
 "#define sipRegisterPyType           sipAPI_%s->api_register_py_type\n"
 "#define sipTypeFromPyTypeObject     sipAPI_%s->api_type_from_py_type_object\n"
 "#define sipTypeScope                sipAPI_%s->api_type_scope\n"
@@ -610,6 +611,7 @@ static void generateInternalAPIHeader(sipSpec *pt, moduleDef *mod,
 "#define sipConvertFromMappedType    sipConvertFromType\n"
 "#define sipConvertFromNamedEnum(v, pt)  sipConvertFromEnum((v), ((sipEnumTypeObject *)(pt))->type)\n"
 "#define sipConvertFromNewInstance(p, wt, t) sipConvertFromNewType((p), (wt)->type, (t))\n"
+        ,mname
         ,mname
         ,mname
         ,mname
@@ -7437,17 +7439,18 @@ static void generateVariable(classDef *context, argDef *ad, int argnr,
 
     /* Some types have supporting variables. */
     if (isInArg(ad))
+    {
+        if (isGetWrapper(ad))
+            prcode(fp,
+"        PyObject *a%dWrapper%s;\n"
+                , argnr, (ad->defval != NULL ? " = 0" : ""));
+
         switch (atype)
         {
         case class_type:
             if (ad->u.cd->convtocode != NULL && !isConstrained(ad))
                 prcode(fp,
 "        int a%dState = 0;\n"
-                    ,argnr);
-
-            if (isGetWrapper(ad))
-                prcode(fp,
-"        PyObject *a%dWrapper;\n"
                     ,argnr);
 
             break;
@@ -7468,6 +7471,7 @@ static void generateVariable(classDef *context, argDef *ad, int argnr,
                 );
             break;
         }
+    }
 }
 
 
@@ -9775,8 +9779,6 @@ static void generateFunctionCall(classDef *cd,classDef *ocd,overDef *od,
                 );
     }
 
-    /* Handle /TransferThis/ for non-factory methods. */
-    if (!isFactory(od))
         for (a = 0; a < od->pysig.nrArgs; ++a)
         {
             argDef *ad = &od->pysig.args[a];
@@ -9784,7 +9786,17 @@ static void generateFunctionCall(classDef *cd,classDef *ocd,overDef *od,
             if (!isInArg(ad))
                 continue;
 
-            if (isThisTransferred(ad))
+            /* Handle any /KeepReference/ arguments. */
+            if (ad->key > 0)
+            {
+                prcode(fp,
+"\n"
+"            sipKeepReference(sipSelf, %d, a%dWrapper);\n"
+                    , ad->key, a);
+            }
+
+            /* Handle /TransferThis/ for non-factory methods. */
+            if (!isFactory(od) && isThisTransferred(ad))
             {
                 prcode(fp,
 "\n"
@@ -9793,8 +9805,6 @@ static void generateFunctionCall(classDef *cd,classDef *ocd,overDef *od,
 "            else\n"
 "                sipTransferBack(sipSelf);\n"
                         );
-
-                break;
             }
         }
 
@@ -10259,6 +10269,9 @@ static int generateArgParser(signatureDef *sd, classDef *cd, ctorDef *ct,
             break;
         }
 
+        if (isGetWrapper(ad))
+            prcode(fp, "@");
+
         prcode(fp,fmt);
     }
 
@@ -10278,6 +10291,9 @@ static int generateArgParser(signatureDef *sd, classDef *cd, ctorDef *ct,
         if (!isInArg(ad))
             continue;
 
+        if (isGetWrapper(ad))
+            prcode(fp, ",&a%dWrapper", a);
+
         switch (ad->atype)
         {
         case mapped_type:
@@ -10293,8 +10309,6 @@ static int generateArgParser(signatureDef *sd, classDef *cd, ctorDef *ct,
 
             if (isThisTransferred(ad))
                 prcode(fp, ",%ssipOwner", (ct != NULL ? "" : "&"));
-            else if (isGetWrapper(ad))
-                prcode(fp, ",&a%dWrapper", a);
 
             if (ad->u.cd->convtocode != NULL && !isConstrained(ad))
                 prcode(fp, ",&a%dState", a);
@@ -10406,14 +10420,11 @@ static char *getSubFormatChar(char fc, argDef *ad)
             flags |= 0x01;
 
         if (isThisTransferred(ad))
-            flags |= 0x20;
-
-        if (isGetWrapper(ad))
-            flags |= 0x08;
+            flags |= 0x10;
 
         if (ad->atype == class_type)
             if (ad->u.cd->convtocode == NULL || isConstrained(ad))
-                flags |= 0x10;
+                flags |= 0x08;
     }
 
     fmt[0] = fc;
